# backtest_fundrate_arbitrage

./: .gitignore  pyproject.toml
prepare/: common.py  download_dydx.py  download_rabbitx.py  prepare.py
simulator/: accounts.py  arbitrage_trade.py  cex_accounts.py  config.py  data_feeds.py  exchange.py  strategy.py  utils.py
tests/: test_cex_accounts.py  test_data_feeds.py  test_exchange.py  test_strategy.py
