[tool.poetry]
name = "backtest-fundrate-arbitrage"
version = "0.1.0"
description = ""
authors = ["stasi <stasi009@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
prettytable = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
